--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder"
+    "build": "electron-builder",
+    "build:ui": "esbuild renderer/ui/SearchBar.jsx --bundle --format=esm --outfile=renderer/ui/searchbar.bundle.js --jsx=automatic --minify",
+    "watch:ui": "esbuild renderer/ui/SearchBar.jsx --bundle --format=esm --outfile=renderer/ui/searchbar.bundle.js --jsx=automatic --watch"
   },
   "devDependencies": {
     "electron": "^25.0.0",
-    "electron-builder": "^24.0.0"
+    "electron-builder": "^24.0.0",
+    "esbuild": "^0.25.8"
   },
   "dependencies": {
-    "electron-reload": "^1.5.0"
+    "electron-reload": "^1.5.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0"
   }
 }
